# safe-rl-cbf-gp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cbf_visualizations.py  pyproject.toml  requirements.txt
code/: cbf_visualizations.py  comparison_rl.py  ppo_cbf_gp_simulation.py  ppo_cbf_gp_train.py  safe_set_figures.py
code/notebooks/: PPO_CBF_GP_InvertedPendulum_train_standalone.ipynb  PPO_InvertedPendulum_train_standalone.ipynb
code/src/: __init__.py  agent.py  args.py  cbf.py  cbf_geom.py  dynamics_gp.py  environment.py  plot.py
results/comparison_ppo_ppo-cbf-gp/ppo/: inverted_pendulum_ppo.pt  log_episodes_ppo.csv
results/comparison_ppo_ppo-cbf-gp/ppo_cbf_gp/: inverted_pendulum.pt  inverted_pendulum_gp.joblib  log_episodes.csv  log_iters.csv
results/trained_models/: inverted_pendulum.pt  inverted_pendulum_gp.joblib
results/training_logs/: log_episodes.csv  log_iters.csv
