[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-rl-cbf-gp"
version = "0.1.0"
description = "PPO with a GP-robust control barrier function safety filter on an inverted pendulum"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "code"}
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    "code/notebooks",
    "results",
    "runs",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
ignore = [
    "E501",
]
